<resources>
    <string name="app_name">AndroidFaceProject</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="title_activity_test_sample">test_sample</string>
    <string name="title_activity_landing_page">LandingPage</string>
    <string name="title_activity_photo_editor">PhotoEditor</string>
    <string name="title_activity_collage">Collage</string>
    <string name="title_activity_application">Application</string>
    <string name="img_desc">Some image from filter holder</string>

    <string name="share">Share</string>
    <string name="btn_pick">Pick</string>
    <string name="btn_pick_mul">Select images</string>
    <string name="title_activity_combine_pics">CombinePicsActivity</string>
    <string name="btn_collage">Create collage</string>
    <string name="title_activity_display_collage">DisplayCollageActivity</string>
    <string name="nine">nine</string>
    <string name="four">four</string>
    <string name="three">three</string>
    <string name="layout_temp3">layout temp3</string>
    <string name="layout_temp4">layout temp4</string>
    <string name="layout_temp9">layout temp9</string>

    <string name="effect1">Brightness</string>
    <string name="effect2">Flip</string>
    <string name="effect3">Hue</string>
    <string name="effect4">Tint</string>
    <string name="effect5">Gamma</string>
    <string name="effect6">Invert</string>
    <string name="effect7">Grayscale</string>
    <string name="effect8">Sepia</string>
    <string name="effect9">Sharpen</string>
    <string name="effect10">Gau. Blur</string>
    <string name="effect11">C. Filter</string>
    <string name="effect12">C. Depth</string>
    <string name="effect13">Emboss</string>
    <string name="effect14">Boost</string>
    <string name="effect15">Noise</string>
    <string name="effect16">Sketch</string>
    <string name="effect17">Vignette</string>
    <string name="effect18">Saturation</string>
    <string name="effect19">Contrast</string>

    <string name="effect21">Age Gender</string>
    <string name="effect22">Adjustments</string>
    <string name="effect23">Filters</string>
    <string name="effect24">Saturation</string>
    <string name="effect_adj_1">Crop</string>
    <string name="effect_adj_2">AutoFix</string>
    <string name="effect_adj_3">Brightness</string>
    <string name="effect_adj_4">Color</string>
    <string name="effect_adj_5">Contrast</string>
    <string name="effect_filt_1">Sepia</string>
    <string name="effect_filt_2">Monochrome</string>
    <string name="effect_filt_3">HDR</string>
    <string name="effect_filt_4">Unicolor</string>
    <string name="effect_filt_5">Inverse</string>
    <string name="brightness_hint">Move Slider to adjust brightness</string>
    <string name="brightness_dialog_title">Adjust Brightness</string>
    <string name="contrast_hint">Move slider to adjust contrast</string>
    <string name="contrast_dialog_title">Adjust Contrast</string>
    <string name="color_hint">Move sliders to adjust color (RGB) values</string>
    <string name="title_activity_collage_first">CollageFirst</string>
    <string name="saveButton">Save</string>
    <string name="undoButton">Undo</string>
    <string name="title_activity_notification_view">NotificationView</string>
    <string name="title_activity_fblogin">fblogin</string>
    <string name="facebook_app_id">1655217564755303</string>
    <string name="color_dialog_title">Adjust Color</string>
    <string name="logout">LogOut</string>
    <string name="title_activity_my_intro">MyIntro</string>

</resources>

