<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/effects_holder"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:background="#99000000"
    android:paddingTop="3dp" >

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onClickEffectButton"
                android:layout_marginRight="5dp"
                android:tag="nineCombo" >

                <ImageView
                    android:id="@+id/effect_img1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/layout_temp3"
                    android:src="@drawable/ic_temp3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/effect_img1"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/three"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onClickEffectButton"
                android:layout_marginRight="5dp"
                android:tag="fourCombo" >

                <ImageView
                    android:id="@+id/effect_img12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/layout_temp4"
                    android:src="@drawable/ic_temp4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/effect_img12"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/four"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onClickEffectButton"
                android:layout_marginRight="5dp"
                android:tag="Saturation" >

                <ImageView
                    android:id="@+id/effect_img24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/layout_temp9"
                    android:src="@drawable/ic_saturation" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/effect_img24"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/nine"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </RelativeLayout>


        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>