<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/effects_holder2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_above="@+id/effects_holder"
    android:background="#99000000"
    android:visibility="invisible"
    android:paddingTop="3dp" >

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onClickAdjButton"
                android:layout_marginRight="5dp"
                android:tag="Crop" >

                <ImageView
                    android:id="@+id/effect_img14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/ic_crop_level2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/effect_img14"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/effect_adj_1"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onClickAdjButton"
                android:layout_marginRight="5dp"
                android:tag="AutoFix" >

                <ImageView
                    android:id="@+id/effect_img1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/ic_autofix" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/effect_img1"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/effect_adj_2"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onClickAdjButton"
                android:layout_marginRight="5dp"
                android:tag="Brightness" >

                <ImageView
                    android:id="@+id/effect_img12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/ic_brightness" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/effect_img12"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/effect_adj_3"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onClickAdjButton"
                android:layout_marginRight="5dp"
                android:tag="Color" >

                <ImageView
                    android:id="@+id/effect_img11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/ic_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/effect_img11"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/effect_adj_4"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onClickAdjButton"
                android:layout_marginRight="5dp"
                android:tag="Contrast" >

                <ImageView
                    android:id="@+id/effect_img35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/ic_contrast" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/effect_img35"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/effect_adj_5"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </RelativeLayout>


        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>