<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/effects_holder3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_above="@+id/effects_holder"
    android:background="#99000000"
    android:visibility="invisible"
    android:paddingTop="3dp" >

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onClickFilterEffectButton"
                android:layout_marginRight="5dp"
                android:tag="Sepia" >

                <ImageView
                    android:id="@+id/effect_img14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/ic_effect_sepia" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/effect_img14"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/effect_filt_1"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onClickFilterEffectButton"
                android:layout_marginRight="5dp"
                android:tag="Monochrome" >

                <ImageView
                    android:id="@+id/effect_img1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/ic_effect_grayscale" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/effect_img1"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/effect_filt_2"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onClickFilterEffectButton"
                android:layout_marginRight="5dp"
                android:tag="HDR" >

                <ImageView
                    android:id="@+id/effect_img12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/ic_effect_contrast" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/effect_img12"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/effect_filt_3"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onClickFilterEffectButton"
                android:layout_marginRight="5dp"
                android:tag="Monocolor" >

                <ImageView
                    android:id="@+id/effect_img11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/ic_effect_hue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/effect_img11"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/effect_filt_4"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onClickFilterEffectButton"
                android:layout_marginRight="5dp"
                android:tag="Inverse" >

                <ImageView
                    android:id="@+id/effect_img35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/ic_effect_invert" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/effect_img35"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/effect_filt_5"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </RelativeLayout>


        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>